Crash when snapping Cursor to selected a Bone in Edit Mode #56675

Closed
opened 2018-09-04 01:59:48 +02:00 by Jay Edwards · 5 comments

System Information
Windows 10, NVIDIA GeForce 940MX, Intel(R) Core(TM) i5-6200U CPU @ 2.30GHz

Blender Version
Broken: 41f4d21079
Worked: Yes

Short description of error
If you use the "cursor to selected" function in edit mode to set the cursor to a bone this will result in a crash.

Exact steps for others to reproduce the error

This can be done with any blend file:

  • create a new Armature

  • go into edit mode

  • select a bone

  • within the snap menu (Got to the armature option in the header in edit mode) select the cursor to selected option

  • this will result in a crash

**System Information** Windows 10, NVIDIA GeForce 940MX, Intel(R) Core(TM) i5-6200U CPU @ 2.30GHz **Blender Version** Broken: 41f4d210796 Worked: Yes **Short description of error** If you use the "cursor to selected" function in edit mode to set the cursor to a bone this will result in a crash. **Exact steps for others to reproduce the error** This can be done with any blend file: - create a new Armature - go into edit mode - select a bone - within the snap menu (Got to the armature option in the header in edit mode) select the cursor to selected option - this will result in a crash
Author

Added subscriber: @Jaye.Antoni_Whyldz

Added subscriber: @Jaye.Antoni_Whyldz
Jay Edwards changed title from Crash when setting Cursor to a Bone in Edit Mode to Crash when setting Cursor to selected a Bone in Edit Mode 2018-09-04 02:00:38 +02:00
Jay Edwards changed title from Crash when setting Cursor to selected a Bone in Edit Mode to Crash when snapping Cursor to selected a Bone in Edit Mode 2018-09-04 04:49:20 +02:00

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-09-04 09:04:49 +02:00

Confirmed… grrr…

Confirmed… grrr…

This issue was referenced by 621b16468e

This issue was referenced by 621b16468ef72fb88cb1b6833a25479cb5dbd66d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56675
No description provided.