Fix T56675: Crash when snapping Cursor to selected a Bone in Edit Mode.

Seriously...